--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,8 @@
         android:layout_height="wrap_content"
         android:text="안녕"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
     
 </LinearLayout>
